# flask_app_template

./: .gitignore  MANIFEST.in  README.md  setup.cfg  setup.py
flaskapp/: __init__.py  posts.py
flaskapp/templates/: base.html
flaskapp/templates/posts/: index.html
tests/: conftest.py  test_factory.py  test_posts.py
