[metadata]
name = flaskapp
version = 0.0.1
url = 
license = Apache License 2.0
license_files =
   LICENSE
maintainer = yukoga
maintainer_email = 
description = Flask app boilerplate code.
long_description = file: README.rst
long_description_content_type = text/x-rst

[options]
packages = find:
include_package_data = true
install_requires =
    Flask

[options.extras_require]
test =
    pytest
    coverage

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source = 
    flaskapp
